--- a/src/DVN-web/web/resources/css/dvnstudy.css
+++ b/src/DVN-web/web/resources/css/dvnstudy.css
@@ -134,6 +134,7 @@ a.vdcStudyFileSubsetAnalysisLink.dvnStudyFileVisualizationLink{display:block; ma
 .downloadas ul li{border:0;float:none}
 .downloadas ul a{width:80px;white-space:nowrap}
 .downloadas ul a:hover{background:khaki;color:#c55b28}
+div[id$=multipleZipPopup] #dvnMultipleZipPopupScrollBox {max-height:160px; overflow-y:auto;}
 /* STUDY COMMENTS */
 .vdcStudyCommentsBlock{width:100%;text-align:left}
 .vdcStudyCommentsDataTable{margin:0}
